# android

./: settings.gradle.kts
app/: build.gradle.kts
app/release/: output-metadata.json
app/release/baselineProfiles/0/: app-release.dm
app/release/baselineProfiles/1/: app-release.dm
app/src/androidTest/java/com/dsd/carcompanion/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/java/com/dsd/carcompanion/: CarCompanionApp.kt  CodeFragment.kt  DataStoreManager.kt  EmailFragment.kt  FirstFragment.kt  ForgotPasswordActivity.kt  HomeFragment.kt  LoginActivity.kt  MainActivity.kt  ModalDialog.kt  NavigationListener.kt  NewPasswordFragment.kt  RegistrationFragment.kt  SecondFragment.kt  VehicleInfoAdapter.kt
app/src/main/java/com/dsd/carcompanion/adapters/: VehicleInfoAdapter.kt
app/src/main/java/com/dsd/carcompanion/api/datastore/: JwtTokenDataStore.kt
app/src/main/java/com/dsd/carcompanion/api/instance/: ApiClient.kt  UserClient.kt  VehicleClient.kt
app/src/main/java/com/dsd/carcompanion/api/models/: ColorResponse.kt  ComponentResponse.kt  CreateUserRequest.kt  LoginRequest.kt  PermissionResponse.kt  PermissionsResponse.kt  PreferencesResponse.kt  ResetPasswordRequest.kt  TokenModel.kt  UIVehicleStats.kt  UserModel.kt  Users.kt  VehicleInfo.kt  VehicleModel.kt  VehicleModelModel.kt  VehicleResponse.kt  VehiclesResponse.kt
app/src/main/java/com/dsd/carcompanion/api/repository/: AuthRepository.kt  VehicleRepository.kt
app/src/main/java/com/dsd/carcompanion/api/service/: UserService.kt  VehicleService.kt
app/src/main/java/com/dsd/carcompanion/api/utils/: JwtTokenManager.kt  ResultOf.kt
app/src/main/java/com/dsd/carcompanion/home/: HomeFragment.kt  LandingPage.kt
app/src/main/java/com/dsd/carcompanion/settings/: SettingsFragment.kt
app/src/main/java/com/dsd/carcompanion/userRegistrationAndLogin/: LoginFragment.kt  LoginViewModel.kt  RegistrationFragment.kt  UserStartActivity.kt
app/src/main/java/com/dsd/carcompanion/utility/: BlurHelper.kt  CustomBottomSheetBehavior.kt  CustomSlider.kt  CustomToggleButton.kt  ImageHelper.kt
app/src/main/java/com/dsd/carcompanion/utils/: Constants.kt  JwtTokenManager.kt  ResultOf.kt
app/src/main/java/com/dsd/carcompanion/vehicleInterfaces/: UserPermissions.kt  UserPermissionsFragment.kt
app/src/main/java/com/dsd/carcompanion/vehicleOwnership/: EditVehicleDialog.kt  VehicleOwnershipFragment.kt
app/src/main/java/com/dsd/carcompanion/welcmeScreen/: WelcomeScreen.kt
app/src/main/res/drawable/: app_logo.xml  background_colors.xml  background_rounded.xml  bottom_sheet_background.xml  bottom_sheet_bg_glass.xml  bs_handle_background.xml  content_box.xml  custom_button.xml  door.xml  doorr.xml  gradient_background.xml  homescreend.xml  ic_battery_charging.xml  ic_battery_empty.xml  ic_battery_full.xml  ic_battery_half_full.xml  ic_close.xml  ic_cloudy_snowing.xml  ic_driving.xml  light.xml  light_on.xml  lock.xml  logo.xml  menu_icon.xml  pull_arrows.xml  rounded_edittext.xml  spinner_background.xml  spinner_element.xml  switch_thumb.xml  switch_thumb_active.xml  switch_track.xml  toggled_bg.xml  untoggled_bg.xml
app/src/main/res/font/: kreon_medium.xml
app/src/main/res/layout/: activity_forgot_password.xml  activity_main.xml  activity_user_start.xml  activity_welcome.xml  content_main.xml  custom_slider.xml  custom_switch.xml  custom_toggle.xml  dialog_edit_vehicle.xml  dialog_forgot_password.xml  dialog_privacy_policy.xml  dialog_terms_and_conditions.xml  drawer_header.xml  fragment_code.xml  fragment_email.xml  fragment_first.xml  fragment_grant_permissions.xml  fragment_home.xml  fragment_landing_page.xml  fragment_login.xml  fragment_new_password.xml  fragment_registration.xml  fragment_settings.xml  fragment_vehicle_ownership.xml  item_vehicle_info.xml  screen_login.xml
app/src/main/res/menu/: drawer_menu.xml  menu_main.xml
app/src/main/res/navigation/: nav_graph.xml  nav_graph_2d_3d.xml  nav_graph_login.xml
app/src/main/res/values/: colors.xml  dimens.xml  ids.xml  preloaded_fonts.xml  strings.xml  themes.xml
app/src/main/res/values-night/: themes.xml
app/src/main/res/values-v23/: themes.xml
app/src/main/res/xml/: vehicle_info.xml
app/src/test/java/com/dsd/carcompanion/: ExampleUnitTest.kt
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
my_car_companion/: CMakeLists.txt  Main.qml  main.cpp  resources.qrc
my_car_companion/Fixed_jar_files/: Qt6Android.jar.arm64_v8a  Qt6Android.jar.x86_64
my_car_companion/Qt_Car_Baked_low_v2/: Qt_Car_Baked_low_v2.qml  _importdata.json  qmldir
my_car_companion/Qt_Car_Baked_low_v2/meshes/: backL_Tire_b_low_mesh.mesh  carBottom_low_mesh.mesh  dash_low_mesh.mesh  doorWindow_b_L_low_mesh.mesh  doorWindow_b_R_low_mesh.mesh  door_b_L_Low_mesh.mesh  door_b_R_Low_mesh.mesh  frontR_Tire_b_Low_mesh.mesh  headLights_low_mesh.mesh  insideFloor_low_mesh.mesh  mainbody_b_Low_mesh.mesh  roof_b_001_mesh.mesh  screens_low_mesh.mesh  seat_front_low_mesh.mesh  seat_rear_low_mesh.mesh  tire_FrontL_low_mesh.mesh  wheel_screen_low_mesh.mesh
my_car_companion/Qt_Car_Baked_low_v2/source scene/: Qt_Car_Baked_low_v2.glb
(+16 files in other folders)
